kubernetes/apps/kube-system/cilium/gateway/external.yaml
---
# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/gateway.networking.k8s.io/gateway_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: external
  namespace: kube-system
  annotations:
    external-dns.alpha.kubernetes.io/target: &hostname external.idahobealefamily.com
    cert-manager.io/cluster-issuer: ${CLUSTER_CERT}
spec:
  gatewayClassName: cilium
  addresses:
    - type: IPAddress
      value: ${SVC_EXTERNAL_CILIUM_GATEWAY_ADDRESSS}
  infrastructure:
    annotations:
      external-dns.alpha.kubernetes.io/hostname: *hostname
      cert-manager.io/cluster-issuer: ${CLUSTER_CERT}
  listeners:
    - name: http-1
      protocol: HTTP
      port: 80
      hostname: "*.idahobealefamily.com"
      allowedRoutes:
        namespaces:
          from: All
    - name: http-2
      protocol: HTTP
      port: 80
      hostname: idahobealefamily.com
      allowedRoutes:
        namespaces:
          from: All
    - name: https-1
      protocol: HTTPS
      port: 443
      hostname: "*.idahobealefamily.com"
      allowedRoutes:
        namespaces:
          from: All
      tls:
        certificateRefs:
          - kind: Secret
            name: "idahobealefamily-com-production-tls"
    - name: https-2
      protocol: HTTPS
      port: 443
      hostname: idahobealefamily.com
      allowedRoutes:
        namespaces:
          from: All
      tls:
        mode: Terminate
        certificateRefs:
          - kind: Secret
            name: "idahobealefamily-com-production-tls"
    - name: overseerr
      protocol: HTTPS
      port: 443
      hostname: "overseerr.idahobealefamily.com"
      allowedRoutes:
        namespaces:
          from: All
      tls:
        mode: Terminate
        certificateRefs:
          - kind: Secret
            name: overseerr-tls
    - name: tautulli
      protocol: HTTPS
      port: 443
      hostname: "tautulli.idahobealefamily.com"
      allowedRoutes:
        namespaces:
          from: All
      tls:
        mode: Terminate
        certificateRefs:
          - kind: Secret
            name: tautulli-tls
    - name: flux-webhook
      protocol: HTTPS
      port: 443
      hostname: "flux-webhook.idahobealefamily.com"
      allowedRoutes:
        namespaces:
          from: All
      tls:
        mode: Terminate
        certificateRefs:
          - kind: Secret
            name: flux-webhook-tls
    - name: kromgo
      protocol: HTTPS
      port: 443
      hostname: "kromgo.idahobealefamily.com"
      allowedRoutes:
        namespaces:
          from: All
      tls:
        mode: Terminate
        certificateRefs:
          - kind: Secret
            name: kromgo-webhook-tls
