kubernetes/apps/kube-system/cilium/gateway/internal.yaml
---
# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/gateway.networking.k8s.io/gateway_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: internal
  namespace: kube-system
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-production
spec:
  gatewayClassName: cilium
  addresses:
    - type: IPAddress
      value: 192.168.20.58
  listeners:
    - name: http
      protocol: HTTP
      port: 80
      allowedRoutes:
        namespaces:
          from: Same
    - name: https
      protocol: HTTPS
      port: 443
      allowedRoutes:
        namespaces:
          from: All
      tls:
        certificateRefs:
          - kind: Secret
            name: "idahobealefamily-com-production-tls"
    - name: bazarr
      protocol: HTTPS
      port: 443
      hostname: "bazarr.idahobealefamily.com"
      allowedRoutes:
        namespaces:
          from: All
      tls:
        mode: Terminate
        certificateRefs:
          - kind: Secret
            name: bazarr-tls
    - name: bazarr-anime
      protocol: HTTPS
      port: 443
      hostname: "bazarr-anime.idahobealefamily.com"
      allowedRoutes:
        namespaces:
          from: All
      tls:
        mode: Terminate
        certificateRefs:
          - kind: Secret
            name: bazarr-anime-tls
    - name: bazarr-uhd
      protocol: HTTPS
      port: 443
      hostname: "bazarr-uhd.idahobealefamily.com"
      allowedRoutes:
        namespaces:
          from: All
      tls:
        mode: Terminate
        certificateRefs:
          - kind: Secret
            name: bazarr-uhd-tls
    - name: radarr
      protocol: HTTPS
      port: 443
      hostname: "radarr.idahobealefamily.com"
      allowedRoutes:
        namespaces:
          from: All
      tls:
        mode: Terminate
        certificateRefs:
          - kind: Secret
            name: radarr-tls
    - name: radarranime
      protocol: HTTPS
      port: 443
      hostname: "radarranime.idahobealefamily.com"
      allowedRoutes:
        namespaces:
          from: All
      tls:
        mode: Terminate
        certificateRefs:
          - kind: Secret
            name: radarranime-tls
    - name: radarruhd
      protocol: HTTPS
      port: 443
      hostname: "radarruhd.idahobealefamily.com"
      allowedRoutes:
        namespaces:
          from: All
      tls:
        mode: Terminate
        certificateRefs:
          - kind: Secret
            name: radarruhd-tls
    - name: sonarr
      protocol: HTTPS
      port: 443
      hostname: "sonarr.idahobealefamily.com"
      allowedRoutes:
        namespaces:
          from: All
      tls:
        mode: Terminate
        certificateRefs:
          - kind: Secret
            name: sonarr-tls
    - name: sonarranime
      protocol: HTTPS
      port: 443
      hostname: "sonarranime.idahobealefamily.com"
      allowedRoutes:
        namespaces:
          from: All
      tls:
        mode: Terminate
        certificateRefs:
          - kind: Secret
            name: sonarranime-tls
    - name: sonarruhd
      protocol: HTTPS
      port: 443
      hostname: "sonarruhd.idahobealefamily.com"
      allowedRoutes:
        namespaces:
          from: All
      tls:
        mode: Terminate
        certificateRefs:
          - kind: Secret
            name: sonarruhd-tls
    - name: sabnzbd
      protocol: HTTPS
      port: 443
      hostname: "sabnzbd.idahobealefamily.com"
      allowedRoutes:
        namespaces:
          from: All
      tls:
        mode: Terminate
        certificateRefs:
          - kind: Secret
            name: sabnzbd-tls
    - name: prowlarr
      protocol: HTTPS
      port: 443
      hostname: "prowlarr.idahobealefamily.com"
      allowedRoutes:
        namespaces:
          from: All
      tls:
        mode: Terminate
        certificateRefs:
          - kind: Secret
            name: prowlarr-tls
    - name: kube-prometheus-stack
      protocol: HTTPS
      port: 443
      hostname: "prometheus.idahobealefamily.com"
      allowedRoutes:
        namespaces:
          from: All
      tls:
        mode: Terminate
        certificateRefs:
          - kind: Secret
            name: prometheus-tls
    - name: rook-ceph-dashboard
      protocol: HTTPS
      port: 443
      hostname: "rook.idahobealefamily.com"
      allowedRoutes:
        namespaces:
          from: All
      tls:
        mode: Terminate
        certificateRefs:
          - kind: Secret
            name: rook-tls
    - name: grafana
      protocol: HTTPS
      port: 443
      hostname: "grafana.idahobealefamily.com"
      allowedRoutes:
        namespaces:
          from: All
      tls:
        mode: Terminate
        certificateRefs:
          - kind: Secret
            name: grafana-tls
    - name: homepage
      protocol: HTTPS
      port: 443
      hostname: "homepage.idahobealefamily.com"
      allowedRoutes:
        namespaces:
          from: All
      tls:
        mode: Terminate
        certificateRefs:
          - kind: Secret
            name: homepage-tls
    - name: qbittorrent
      protocol: HTTPS
      port: 443
      hostname: "qbittorrent.idahobealefamily.com"
      allowedRoutes:
        namespaces:
          from: All
      tls:
        mode: Terminate
        certificateRefs:
          - kind: Secret
            name: qbittorrent-tls
    - name: huntarr
      protocol: HTTPS
      port: 443
      hostname: "huntarr.idahobealefamily.com"
      allowedRoutes:
        namespaces:
          from: All
      tls:
        mode: Terminate
        certificateRefs:
          - kind: Secret
            name: huntarr-tls
    - name: readarr
      protocol: HTTPS
      port: 443
      hostname: "readarr.idahobealefamily.com"
      allowedRoutes:
        namespaces:
          from: All
      tls:
        mode: Terminate
        certificateRefs:
          - kind: Secret
            name: readarr-tls
    - name: alertmanager
      protocol: HTTPS
      port: 443
      hostname: "alertmanager.idahobealefamily.com"
      allowedRoutes:
        namespaces:
          from: All
      tls:
        mode: Terminate
        certificateRefs:
          - kind: Secret
            name: alertmanager-tls
    - name: hubble
      protocol: HTTPS
      port: 443
      hostname: "hubble.idahobealefamily.com"
      allowedRoutes:
        namespaces:
          from: All
      tls:
        mode: Terminate
        certificateRefs:
          - kind: Secret
            name: hubble-tls
    - name: atuin
      protocol: HTTPS
      port: 443
      hostname: "atuin.idahobealefamily.com"
      allowedRoutes:
        namespaces:
          from: All
      tls:
        mode: Terminate
        certificateRefs:
          - kind: Secret
            name: atuin-tls
